sonar fixes and attempt to fix e2e tets